# MultiPartyNetwork

./: CONTRIBUTORS  LICENSE  README.md
src/: mp_network.cpp  mp_network.h
src/tests/001-connect/: gen_local_ips.sh  player.cpp
src/tests/001-connect/logs/0010-player/: log-mpc0001.txt  log-mpc0002.txt  log-mpc0003.txt  log-mpc0004.txt  log-mpc0005.txt  log-mpc0006.txt  log-mpc0007.txt  log-mpc0008.txt  log-mpc0009.txt  log-mpc0010.txt
src/tests/002-hello_async/: CMakeLists.txt  player.cpp  run_local.sh
src/tests/002-hello_async/logs/0010-player/: log-mpc0001.txt  log-mpc0002.txt  log-mpc0003.txt  log-mpc0004.txt  log-mpc0005.txt  log-mpc0006.txt  log-mpc0007.txt  log-mpc0008.txt  log-mpc0009.txt  log-mpc0010.txt
src/tests/003-around_the_world/: player.cpp
src/tests/003-around_the_world/logs/0010-player/: log-mpc0001.txt  log-mpc0002.txt  log-mpc0003.txt  log-mpc0004.txt  log-mpc0005.txt  log-mpc0006.txt  log-mpc0007.txt  log-mpc0008.txt  log-mpc0009.txt  log-mpc0010.txt
src/tests/004-classy/: CMakeLists.txt  f_demo.cpp  f_demo.h  player.cpp
src/tests/004-classy/logs/0010-player/: log-mpc0001.txt  log-mpc0002.txt  log-mpc0003.txt  log-mpc0004.txt  log-mpc0005.txt  log-mpc0006.txt  log-mpc0007.txt  log-mpc0008.txt  log-mpc0009.txt  log-mpc0010.txt
